--- a/pom.xml
+++ b/pom.xml
@@ -167,12 +167,16 @@
             <artifactId>redisson</artifactId>
             <version>3.12.3</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
+<!--            <artifactId>jackson-dataformat-avro</artifactId>-->
+<!--            <version>2.9.8</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-avro</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
         </dependency>
-
     </dependencies>
 
     <build>
