--- a/pom.xml
+++ b/pom.xml
@@ -172,10 +172,19 @@
 <!--            <artifactId>jackson-dataformat-avro</artifactId>-->
 <!--            <version>2.9.8</version>-->
 <!--        </dependency>-->
+
+        <!-- jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
+        </dependency>
+
+       <!--   Bloom Filter     -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
         </dependency>
     </dependencies>
 
